--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -1,3 +1,4 @@
+{% extends 'food/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,10 +6,23 @@
     <title>Detail</title>
 </head>
 <body>
+    {% block body %}
 
-    <h1> {{item.name}} </h1>
-    <h2> {{item.description}} </h2>
-    <h3> {{item.price}} </h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="{{item.image.url}}" class="card" height="300px">
+            </div>
 
+            <div class="col-md-6">
+                <h3>{{ item.name }}</h3>
+                <h5>{{ item.description }}</h5>
+                <h6>{{ item.price }}</h6>
+                <a href="{% url 'food:delete_item' item.id %}">Delete</a>
+            </div>
+        </div>
+    </div>
+
+    {% endblock %}
 </body>
 </html>
