--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -17,8 +17,23 @@
             <a class="nav-item nav-link me-3" href="{% url 'food:create_item' %}"> Add item </a>
             <a class="nav-item nav-link me-3" href="#"> Delete item </a>
             <a class="nav-item nav-link me-3" href="#"> View item </a>
+            {% if user.is_authenticated %}
+                <a class="nav-item nav-link me-3" href="{% url 'profile' %}"> Profile </a>
+                <a class="nav-item nav-link me-3" href="{% url 'logout' %}"> Logout </a>
+            {% else %}
+                <a class="nav-item nav-link me-3" href="{% url 'login' %}"> Login </a>
+<!--                <a href="{% url 'register' %}"> Register </a>-->
+            {% endif %}
         </div>
     </nav>
+
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
 
   {% block body %}
   {% endblock %}
